[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Enemies/Choppa.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hazards/Enemies/choppa.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Hazards/Enemies/choppa_popped.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/Choppa_FSM.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Enemies/choppa_move.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "pop",
"speed": 40.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 8.0

[sub_resource type="CircleShape2D" id=13]
radius = 8.0

[sub_resource type="CircleShape2D" id=11]
radius = 147.031

[node name="ChoppaPos" type="Position2D"]

[node name="NavLine" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Choppa" type="KinematicBody2D" parent="."]
position = Vector2( 0.930708, 9.99577 )
collision_layer = 128
collision_mask = 4
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 1 )
__meta__ = {
"enemy": true
}
x_mov = 32.0
y_mov = 10.0
lunge_speed = 160.0

[node name="StateMachine" type="Node" parent="Choppa"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choppa"]
shape = SubResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="Choppa"]
frames = SubResource( 7 )
frame = 2
playing = true

[node name="Hitbox" type="Area2D" parent="Choppa"]
collision_layer = 256
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choppa/Hitbox"]
shape = SubResource( 12 )

[node name="Hurtbox" type="Area2D" parent="Choppa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choppa/Hurtbox"]
shape = SubResource( 13 )

[node name="PlayerVisibility" type="RayCast2D" parent="Choppa"]
enabled = true
collision_mask = 5

[node name="Proximity" type="Area2D" parent="Choppa"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choppa/Proximity"]
position = Vector2( -0.311295, 0.6446 )
shape = SubResource( 11 )

[node name="Chasing" type="Timer" parent="Choppa"]
wait_time = 0.8

[node name="ReturnNavAgent" type="NavigationAgent2D" parent="Choppa"]
avoidance_enabled = true
radius = 32.0

[node name="Move" type="AudioStreamPlayer" parent="Choppa"]
stream = ExtResource( 5 )

[connection signal="player_spotted" from="Choppa" to="Choppa/StateMachine" method="_on_Choppa_player_spotted"]
[connection signal="animation_finished" from="Choppa/Sprite" to="Choppa" method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Choppa/Proximity" to="Choppa" method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Choppa/Proximity" to="Choppa" method="_on_Proximity_body_exited"]
[connection signal="timeout" from="Choppa/Chasing" to="Choppa" method="_on_Flying_timeout"]
[connection signal="velocity_computed" from="Choppa/ReturnNavAgent" to="Choppa" method="_on_ReturnNavAgent_velocity_computed"]
